# bogdan-rosca

./: .gitmodules  README.md
.github/actions/check-api-is-running/: action.yml
.github/workflows/: main.yml  run-api-tests.yml  run-tests.yml
api-test-automation/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_report.html
api-test-automation/config/: config.py
api-test-automation/data/: inventory.json  order.json
api-test-automation/fixtures/: fixtures.py
api-test-automation/tests/: base_test.py  test_store.py  test_store_inventory.py  test_store_orders.py
api-test-automation/utils/: store_inventory_utils.py  store_order_utils.py  test_utils.py
mobile-app-automation/: .gitignore  Dockerfile  README.md  build.gradle.kts
mobile-app-automation/allure-report/: index.html
mobile-app-automation/allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
mobile-app-automation/allure-report/export/: influxDbData.txt  prometheusData.txt
mobile-app-automation/allure-report/history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
mobile-app-automation/allure-report/widgets/: environment.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
mobile-app-automation/test-report/: index.html
mobile-app-automation/test-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
mobile-app-automation/test-report/export/: influxDbData.txt  prometheusData.txt
(+41 files in other folders)
